--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-redux": "^7.1.24",
     "@types/redux-saga": "^0.10.5",
-    "axios": "^0.27.2",
+    "axios": "1.6.8",
     "css-minimizer-webpack-plugin": "^4.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
