--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "5.2.1"
   },
   "scripts": {
     "start": "webpack serve --config webpack.config.js",
